# libuipc-jgs2

src/backends/: CMakeLists.txt
src/backends/jgs2/: CMakeLists.txt  sim_engine.cpp  sim_engine.h  sim_system.cpp  sim_system.h
src/geometry/: CMakeLists.txt
src/geometry/cubature/: greedy_cube_op.cpp  greedy_cube_op.h  matrix3.h  nnls.cpp  nnls.h  settings.h  steve.cpp  steve.h  types.h  vec3.h  vector.cpp  vector.h
